# Denoiser.cpp

./: .README.md.swo  .README.md.swp  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  demucs.py  main  main.cpp  project_report.docx
main_app/: .gitignore  CMakeLists.txt  Denoiser.cpp.code-workspace  README.md  audio.h  data1.txt  denoiser.cpp  denoiser.h  layers.cpp  layers.h  load_model.cpp  load_model.h  main.cpp  sample-rate-conversion-with-polyphase-filtering-example.cpp  tensors.h  tests.cpp  tests.h
main_app/dataset/debug/clean/: 015.wav:Zone.Identifier
main_app/dataset/debug/noisy/: 002.wav:Zone.Identifier  003.wav:Zone.Identifier  005.wav:Zone.Identifier  007.wav:Zone.Identifier  008.wav:Zone.Identifier  009.wav:Zone.Identifier  010.wav:Zone.Identifier  015.wav:Zone.Identifier
main_app/dataset/noisy/: 001.wav:Zone.Identifier  004.wav:Zone.Identifier  006.wav:Zone.Identifier  011.wav:Zone.Identifier  012.wav:Zone.Identifier  013.wav:Zone.Identifier  014.wav:Zone.Identifier
main_app/sources/: audio.cpp  audio.h  coders.h  demucs.cpp  denoiser.h  encoders.cpp  layers.cpp  layers.h  main.cpp  models.cpp  streamer.cpp  tensors.h  tests.cpp  tests.h
main_app/tests/: analyze_models.py  create_tests.py  our_denoise_demucs_48.py  tests_initialize.py  tr.py
sources/: audio.cpp  audio.h  coders.h  encoders.cpp  layers.h  main.cpp  models.cpp  streamer.cpp  tests.cpp  tests.h
tests/: analyze_models.py  conversion.py  create_tests.py  jit.py  load_weights.py  main.py  our_denoise_demucs_48.py  tests_initialize.py  tr.py
tests/test_data/DemucsStreamer/: input.pth  prediction.pth
tests/test_data/SimpleModel/: input.pth  model.pth  prediction.pth
trash/: compile_flags.txt  settings.json  trash.txt
